k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlfa-api
  labels:
    app: mlfa
    component: api
spec:
  type: ClusterIP
  selector:
    app: mlfa
    component: api
  ports:
    - name: http
      port: 80
      targetPort: http
